2006-01-30  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/about/pubs.html: update LJ urls.

	* site/install/devel.ihtml: announce .30 for FreeBSD too.

2006-01-28  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/sponsor/options.html (src): add note about cheques

2006-01-25  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/about/doneet.html (Module): remove. 

2006-01-25  Jan Nieuwenhuizen  <janneke@gnu.org>

	* TRANSLATION: Remove slackware, donate.

2006-01-21  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/install/devel.ihtml: 28-1
	28-2 for darwin.

2006-01-21  John Mandereau  <john.mandereau@free.fr>

	* fr/about/pubs.html: update, and typo corrections

2006-01-20  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/about/pubs.html: Updat lj entry using old-news.

2006-01-19  Jan Nieuwenhuizen  <janneke@gnu.org>

	* README: 
	* site/devel/participating/index.html: Fix cvs command.

2006-01-16    <kroeger@pedrokroeger.net>

	* site/install/stable.ihtml: fix mingw link.

2006-01-16  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/install/devel.ihtml: 2.7.27-5

2006-01-13  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/install/devel.ihtml: more explicit instructions.

	* site/news.ihtml (Preferably): announce -4

	* site/install/devel.ihtml: announce -4.

	* site/install/stable.ihtml: change to PLATFORM-ARCH download links.

2006-01-12  Gauvain Pocentek  <gauvainpocentek@yahoo.fr>

	* fr/install/index.html: update fedora installation tips

2006-01-12  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/install/devel.ihtml: add freebsd, upgrade to 2.7.27-3
	gmane links for bugs.
	opss. move freebsd.

2006-01-08  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/news.ihtml (href): announce new binaries.

	* site/install/devel.ihtml: announce 2.7.27-2 for macos & windows.
	remove autopackage, install SH-archive.

2006-01-05  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/install/devel.ihtml: 2.7.26-3, 2.7.26-4 for windows.

2006-01-04  Han-Wen Nienhuys  <hanwen@xs4all.nl>
