@@ -1,5 +1,5 @@
 <!--
-    Translation of CVS Revision: 1.21
+    Translation of CVS Revision: 1.23
     
     Translators must leave this comment in tact, but remove any dollar
     signs ($) from the CVS Revision indicator.
@@ -23,27 +23,28 @@ Nos articles&nbsp;:
 
 D'autres articles&nbsp;:
 
-
-<img src="@IMAGES@lj-cover140.png" align="right" alt="linux journal cover">
-<!-- not yet electronically available, but mention to give users a chance
-    to buy the magazine at news stand !-->
+<a href="@IMAGES@lj-cover140.png">
+<img src="@IMAGES@lj-cover140.png" align="right" alt="linux journal
+cover">
+</a>
 
 <dl>
   <dt>D&eacute;cembre 2005</dt>
   <dd>
     <em>Linux Journal</em> publie un article sur
-    <a href="http://www.linuxjournal.com/article/8583"><em>de
+    <a href="http://www.linuxjournal.com/article/8364"><em>de
     stup&eacute;fiants graphiques [d'analyse Schenkerienne] avec GNU
     LilyPond</em></a> (<em>Stunning
     [Schenker] Graphics with GNU LilyPond</em>), cit&eacute; en
     couverture. Il s'agit d'un article d&eacute;taill&eacute; mais pratique, proposant des
     extraits musicaux &eacute;dit&eacute;s avec LilyPond.
     <br>
-    <!-- Schenkerian Analysis [..] is notoriously difficult to notate
-    using [..] Finale and Sibelius.  [..] LilyPond [is] a powerful
-    tool for creating Schenkerian notation graphs.  !-->
-    &laquo;&nbsp;GNU LilyPond g&eacute;n&egrave;re des beaux graphiques, rel&eacute;guant au
+    Son auteur Kris Shaffer note que &laquo;&nbsp;GNU LilyPond g&eacute;n&egrave;re des beaux graphiques, rel&eacute;guant au
     second plan ses alternatives commerciales.&nbsp;&raquo;
+
+    <p>
+    Cet article est accessible <a
+    href="http://www.linuxjournal.com/article/8583">en ligne</a>.
   </dd>
   
   <dt>20 ao&ucirc;t 2005</dt>
