@@ -1,5 +1,5 @@
 <!--
-    Translation of CVS Revision: 1.3
+    Translation of CVS Revision: 1.6
     
     Translators must leave this comment in tact, but remove any dollar
     signs ($) from the CVS Revision indicator.
@@ -73,6 +73,9 @@ src="http://images.paypal.com/images/x-click-but02.gif" name="submit" alt="Make 
 <blockquote>
 <tt>hanwen@xs4all.nl</tt>
 </blockquote>
+
+<em>Merci d'&eacute;viter les ch&egrave;ques, les encaisser nous
+co&ucirc;te environ 25 euros.<em>
 
 </div>
 
