@@ -1,3 +1,8 @@
+2006-02-02  Gauvain Pocentek  <gauvainpocentek@yahoo.fr>
+
+	* fr/sponsor/options.html: update translation
+	* fr/about/pubs.html: idem
+
 2006-01-30  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
 	* site/about/pubs.html: update LJ urls.
